fix: button z-index mismatch

--- a/src/style.scss
+++ b/src/style.scss
@@ -155,6 +155,7 @@ button:focus-visible {
   height: 100vh;
   height: 100dvh;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 999;
 }
 
 @media (prefers-color-scheme: dark) {
